<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/normal_padding"
    android:paddingEnd="@dimen/normal_padding"
    tools:context=".ui.RepositoryActivity">

    <TextView
        android:id="@+id/repositoryNameTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:fontFamily="@font/nunito_bold"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name" />

    <TextView
        android:id="@+id/repositoryDetailsTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/repositoryNameTXT"
        tools:text="Description" />

    <ImageView
        android:id="@+id/starIMG"
        android:layout_width="@dimen/small_icon_size"
        android:layout_height="@dimen/small_icon_size"
        android:layout_marginTop="@dimen/large_margin"
        android:contentDescription="@string/cd_amount_stars_rep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repositoryDetailsTXT"
        android:src="@drawable/ic_stars" />

    <TextView
        android:id="@+id/starsTXT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/starIMG"
        app:layout_constraintTop_toTopOf="@+id/starIMG"
        tools:text="Stars" />

    <ImageView
        android:id="@+id/issuesIMG"
        android:layout_width="@dimen/small_icon_size"
        android:layout_height="@dimen/small_icon_size"
        android:layout_marginTop="@dimen/large_margin"
        android:contentDescription="@string/cd_amount_issues_rep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starIMG"
        android:src="@drawable/ic_warning" />

    <TextView
        android:id="@+id/issuesTXT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/issuesIMG"
        app:layout_constraintTop_toTopOf="@+id/issuesIMG"
        tools:text="Issues" />

    <ImageView
        android:id="@+id/forkIMG"
        android:layout_width="@dimen/small_icon_size"
        android:layout_height="@dimen/small_icon_size"
        android:layout_marginTop="@dimen/large_margin"
        android:contentDescription="@string/cd_amount_forks_rep"
        android:src="@drawable/ic_fork"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issuesIMG" />

    <TextView
        android:id="@+id/forkTXT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/forkIMG"
        app:layout_constraintTop_toTopOf="@+id/forkIMG"
        tools:text="Fork" />

    <ImageView
        android:id="@+id/watchersIMG"
        android:layout_width="@dimen/small_icon_size"
        android:layout_height="@dimen/small_icon_size"
        android:layout_marginTop="@dimen/large_margin"
        android:contentDescription="@string/cd_amount_watchers_rep"
        android:src="@drawable/ic_watchers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forkIMG" />

    <TextView
        android:id="@+id/watchersTXT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/watchersIMG"
        app:layout_constraintTop_toTopOf="@+id/watchersIMG"
        tools:text="Watchers" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:clipToPadding="false"
        android:transitionName="card"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watchersIMG"
        tools:layout_editor_absoluteX="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/large_padding">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatarIMG"
                android:layout_width="@dimen/small_avatar_size"
                android:layout_height="@dimen/small_avatar_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/nameTXT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:ellipsize="end"
                android:fontFamily="@font/nunito_bold"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatarIMG"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Name" />

            <TextView
                android:id="@+id/descriptionTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:ellipsize="end"
                app:layout_constraintStart_toEndOf="@+id/avatarIMG"
                app:layout_constraintTop_toBottomOf="@+id/nameTXT"
                tools:text="Description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/openRepositoryBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/open_repository"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>